--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ rel/example_project
 .concrete/DEV_MODE
 .rebar
 .erlang.mk/
-emqx_auth_mysql.d
+emqx_mysql.d
 ct.coverdata
 logs/
 test/ct.cover.spec
@@ -25,6 +25,6 @@ _build/
 rebar.lock
 erlang.mk
 rebar3.crashdump
-etc/emqx_auth_mysql.conf.rendered
+etc/emqx_mysql.conf.rendered
 .rebar3/
 *.swp
