--- a/etc/emqx_mysql.conf
+++ b/etc/emqx_mysql.conf
@@ -1,5 +1,5 @@
 ##--------------------------------------------------------------------
-## MySQL Auth/ACL Plugin
+## MySQL Datastore Plugin
 ##--------------------------------------------------------------------
 
 ## MySQL server address.
@@ -7,32 +7,32 @@
 ## Value: Port | IP:Port
 ##
 ## Examples: 3306, 127.0.0.1:3306, localhost:3306
-auth.mysql.server = 127.0.0.1:3306
+mysql.server = 127.0.0.1:3306
 
 ## MySQL pool size.
 ##
 ## Value: Number
-auth.mysql.pool = 8
+mysql.pool = 8
 
 ## MySQL username.
 ##
 ## Value: String
-## auth.mysql.username =
+## mysql.username =
 
 ## MySQL password.
 ##
 ## Value: String
-## auth.mysql.password =
+## mysql.password =
 
 ## MySQL database.
 ##
 ## Value: String
-auth.mysql.database = mqtt
+mysql.database = mqtt
 
 ## MySQL query timeout
 ##
 ## Value: Duration
-## auth.mysql.query_timeout = 5s
+## mysql.query_timeout = 5s
 
 ## Variables: %u = username, %c = clientid
 
@@ -50,26 +50,26 @@ auth.mysql.database = mqtt
 ##  - %C: common name of client TLS cert
 ##  - %d: subject of client TLS cert
 ##
-auth.mysql.auth_query = select password from mqtt_user where username = '%u' limit 1
-## auth.mysql.auth_query = select password_hash as password from mqtt_user where username = '%u' limit 1
+mysql.auth_query = select password from emqx_device where username = '%u' limit 1
+## mysql.auth_query = select password_hash as password from emqx_device where username = '%u' limit 1
 
 ## Password hash.
 ##
 ## Value: plain | md5 | sha | sha256 | bcrypt
-auth.mysql.password_hash = sha256
+mysql.password_hash = sha256
 
 ## sha256 with salt prefix
-## auth.mysql.password_hash = salt,sha256
+## mysql.password_hash = salt,sha256
 
 ## bcrypt with salt only prefix
-## auth.mysql.password_hash = salt,bcrypt
+## mysql.password_hash = salt,bcrypt
 
 ## sha256 with salt suffix
-## auth.mysql.password_hash = sha256,salt
+## mysql.password_hash = sha256,salt
 
 ## pbkdf2 with macfun iterations dklen
 ## macfun: md4, md5, ripemd160, sha, sha224, sha256, sha384, sha512
-## auth.mysql.password_hash = pbkdf2,sha256,1000,20
+## mysql.password_hash = pbkdf2,sha256,1000,20
 
 ## Superuser query.
 ##
@@ -81,7 +81,7 @@ auth.mysql.password_hash = sha256
 ##  - %C: common name of client TLS cert
 ##  - %d: subject of client TLS cert
 ##
-auth.mysql.super_query = select is_superuser from mqtt_user where username = '%u' limit 1
+mysql.super_query = select is_superuser from emqx_device where username = '%u' limit 1
 
 ## ACL query.
 ##
@@ -93,5 +93,5 @@ auth.mysql.super_query = select is_superuser from mqtt_user where username = '%u
 ##  - %c: clientid
 ##
 ## Note: You can add the 'ORDER BY' statement to control the rules match order
-auth.mysql.acl_query = select allow, ipaddr, username, clientid, access, topic from mqtt_acl where ipaddr = '%a' or username = '%u' or username = '$all' or clientid = '%c'
+mysql.acl_query = select allow, ipaddr, username, clientid, access, topic from emqx_acl where ipaddr = '%a' or username = '%u' or username = '$all' or clientid = '%c'
 
