--- a/etc/emqx_mysql.conf
+++ b/etc/emqx_mysql.conf
@@ -17,22 +17,22 @@ mysql.pool = 8
 ## MySQL username.
 ##
 ## Value: String
-## mysql.username =
+mysql.username = root
 
 ## MySQL password.
 ##
 ## Value: String
-## mysql.password =
+mysql.password = 123456
 
 ## MySQL database.
 ##
 ## Value: String
-mysql.database = mqtt
+mysql.database = emqx
 
 ## MySQL query timeout
 ##
 ## Value: Duration
-## mysql.query_timeout = 5s
+mysql.query_timeout = 5s
 
 ## Variables: %u = username, %c = clientid
 
