--- a/etc/emqx_mysql.conf
+++ b/etc/emqx_mysql.conf
@@ -50,8 +50,8 @@ mysql.query_timeout = 5s
 ##  - %C: common name of client TLS cert
 ##  - %d: subject of client TLS cert
 ##
-mysql.auth_query = select password from emqx_device where username = '%u' limit 1
-## mysql.auth_query = select password_hash as password from emqx_device where username = '%u' limit 1
+mysql.auth_query = select password from mqtt_device where username = '%u' limit 1
+## mysql.auth_query = select password_hash as password from mqtt_device where username = '%u' limit 1
 
 ## Password hash.
 ##
@@ -81,7 +81,7 @@ mysql.password_hash = sha256
 ##  - %C: common name of client TLS cert
 ##  - %d: subject of client TLS cert
 ##
-mysql.super_query = select is_superuser from emqx_device where username = '%u' limit 1
+mysql.super_query = select is_superuser from mqtt_device where username = '%u' limit 1
 
 ## ACL query.
 ##
@@ -93,5 +93,5 @@ mysql.super_query = select is_superuser from emqx_device where username = '%u' l
 ##  - %c: clientid
 ##
 ## Note: You can add the 'ORDER BY' statement to control the rules match order
-mysql.acl_query = select allow, ipaddr, username, clientid, access, topic from emqx_acl where ipaddr = '%a' or username = '%u' or username = '$all' or clientid = '%c'
+mysql.acl_query = select allow, ipaddr, username, clientid, access, topic from mqtt_acl where ipaddr = '%a' or username = '%u' or username = '$all' or clientid = '%c'
 
