--- a/etc/emqx_mysql.conf
+++ b/etc/emqx_mysql.conf
@@ -27,7 +27,7 @@ mysql.password = 123456
 ## MySQL database.
 ##
 ## Value: String
-mysql.database = emqx
+mysql.database = mqtt
 
 ## MySQL query timeout
 ##
