--- a/etc/emqx_mysql.conf
+++ b/etc/emqx_mysql.conf
@@ -38,8 +38,7 @@ mysql.query_timeout = 5s
 
 ## Authentication query.
 ##
-## Note that column names should be 'password' and 'salt' (if used).
-## In case column names differ in your DB - please use aliases,
+## Note: In case column names differ in your DB - please use aliases,
 ## e.g. "my_column_name as password".
 ##
 ## Value: SQL
@@ -51,12 +50,11 @@ mysql.query_timeout = 5s
 ##  - %d: subject of client TLS cert
 ##
 mysql.auth_query = select password from mqtt_device where username = '%u' limit 1
-## mysql.auth_query = select password_hash as password from mqtt_device where username = '%u' limit 1
 
 ## Password hash.
 ##
 ## Value: plain | md5 | sha | sha256 | bcrypt
-mysql.password_hash = sha256
+mysql.password_hash = plain
 
 ## sha256 with salt prefix
 ## mysql.password_hash = salt,sha256
