--- a/etc/emqx_mysql.conf
+++ b/etc/emqx_mysql.conf
@@ -8,7 +8,7 @@
 ## Value: Port | IP:Port
 ##
 ## Examples: 3306, 127.0.0.1:3306, localhost:3306
-mysql.server = 127.0.0.1:3306
+mysql.address = 127.0.0.1:3306
 
 ## MySQL pool size.
 ##
